--- a/index.html
+++ b/index.html
@@ -5,24 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap -->
+    <!-- Reset CSS-->
+    <link rel="stylesheet" href="build/css/reset.css">
+
+    <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Main stylesheet-->
     <link rel="stylesheet" href="build/css/main.css">
-    <link rel="shortcut icon" href="icon.gif">
 
     <title>mainCode</title>
+    <link rel="shortcut icon" href="icon.gif">
+
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
+<header class="header">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <img src="src/img/logo.png" alt="logo" class="logo">
+                <div class="header-logoText">
+                <p class="header-logoName header-logoName--1">Центр Эстетической</p>
+                <p class="header-logoName header-logoName--2">стоматологии и имплантологии</p>
+                <p class="header-logoName header-logoName--3">доктора иванова</p>
 
+                </div>
+            </div>
+            <div class="header-location">
+                <span class="header-location-address"></span>
+                <p class="header-address">г.Харьков, 61002 Украина ул. Гвардейцев 12</p>
+            </div>
+            <div class="header-contact">
+                <span class="header-contact-phone"></span>
+                <div class="header-contact-allNumber">
+                <p class="header-contact-mainNumber">+38 (050) 814 15 15</p>
 
+                    <label for="chkBx-allNumber">посмотреть номера</label>
+                    <input type="checkbox" id="chkBx-allNumber">
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 <!-- Jquery -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<!-- Bootstrap JS-->
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
