--- a/index.html
+++ b/index.html
@@ -28,24 +28,30 @@
         <div class="row">
             <div class="col-lg-6">
                 <img src="src/img/logo.png" alt="logo" class="logo">
+
                 <div class="header-logoText">
-                <p class="header-logoName header-logoName--1">Центр Эстетической</p>
-                <p class="header-logoName header-logoName--2">стоматологии и имплантологии</p>
-                <p class="header-logoName header-logoName--3">доктора иванова</p>
+                    <p class="header-logoName header-logoName--1">Центр Эстетической</p>
+
+                    <p class="header-logoName header-logoName--2">стоматологии и имплантологии</p>
+
+                    <p class="header-logoName header-logoName--3">доктора иванова</p>
 
                 </div>
             </div>
             <div class="header-location">
                 <span class="header-location-address"></span>
+
                 <p class="header-address">г.Харьков, 61002 Украина ул. Гвардейцев 12</p>
             </div>
             <div class="header-contact">
                 <span class="header-contact-phone"></span>
-                <div class="header-contact-allNumber">
-                <p class="header-contact-mainNumber">+38 (050) 814 15 15</p>
 
-                    <label for="chkBx-allNumber">посмотреть номера</label>
-                    <input type="checkbox" id="chkBx-allNumber">
+                <div class="header-contact-allNumber">
+                    <p class="header-contact-mainNumber">+38 (050) 814 15 15</p>
+                    <div class="chkBx">
+                        <input type="checkbox" id="chkBx-allNumber">
+                        <label for="chkBx-allNumber" class="header-contact-label">посмотреть номера</label>
+                    </divcla>
                 </div>
             </div>
         </div>
