dropdown phone number

--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@
                 <span class="header-contact-phone"></span>
 
                 <div class="header-contact-allNumber">
+                    <div>
                     <p class="header-contact-mainNumber">+38 (050) 814 15 15</p>
                     <div class="chkBx">
                         <input type="checkbox" id="chkBx-allNumber">
                         <label for="chkBx-allNumber" class="header-contact-label">посмотреть номера</label>
-                    </divcla>
+                    </div>
+                    </div>
+                    <div class="chkBx-showPhone">
+                        <p class="chkBx-showPhone-text">+38 (050) 814 15 15</p>
+                        <p class="chkBx-showPhone-text">+38 (050) 814 15 15</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -61,5 +67,7 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap JS-->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- script -->
+<script src="src/js/script.js"></script>
 </body>
 </html>
