--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
         </div>
     </div>
 </header>
+<div class="slider">
+    <nav class="navbar ">
+        <div class="container">
+            <div class="row">
+                <ul class="menu">
+                    <li class="menu-item"><a href="#">О центре</a></li>
+                    <li class="menu-item"><a href="#">Лечение</a></li>
+                    <li class="menu-item"><a href="#">Контакты</a></li>
+                    <li class="menu-item"><a href="#">Обратная связь</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+<div class="background-dark">
+
+</div>
+</div>
 <!-- Jquery -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap JS-->
