slider without interest facts

--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
 
                 <div class="header-contact-allNumber">
                     <div>
-                    <p class="header-contact-mainNumber">+38 (050) 814 15 15</p>
-                    <div class="chkBx">
-                        <input type="checkbox" id="chkBx-allNumber">
-                        <label for="chkBx-allNumber" class="header-contact-label">посмотреть номера</label>
-                    </div>
+                        <p class="header-contact-mainNumber">+38 (050) 814 15 15</p>
+
+                        <div class="chkBx">
+                            <input type="checkbox" id="chkBx-allNumber">
+                            <label for="chkBx-allNumber" class="header-contact-label">посмотреть номера</label>
+                        </div>
                     </div>
                     <div class="chkBx-showPhone">
                         <p class="chkBx-showPhone-text">+38 (050) 814 15 15</p>
+
                         <p class="chkBx-showPhone-text">+38 (050) 814 15 15</p>
                     </div>
                 </div>
@@ -76,9 +78,22 @@
             </div>
         </div>
     </nav>
-<div class="background-dark">
-
-</div>
+    <div class="background-dark">
+        <div class="container">
+            <div class="row">
+                <div class="slider-title">
+                    <p class="slider-titleText">Харьковский стоматологический центр</p>
+                    <hr class="slider-title-separator">
+                    <p class="slider-titleName">Центр эстетической стоматологии  и имплантологии доктора Ивановa</p>
+                </div>
+                <div class="titleBtnGroup">
+                    <button class="btn-custom btn-appointment">Записаться на прием</button>
+                    <span class="titleBtnGroup-separator">или</span>
+                    <button class=" btn-custom btn-askDoctor">Задать вопрос врачу</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <!-- Jquery -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
