--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
                     <span class="titleBtnGroup-separator">или</span>
                     <button class=" btn-custom btn-askDoctor">Задать вопрос врачу</button>
                 </div>
+                <div class="factsAboutCompany">
+                    <ul>
+                        <li class="factsAboutCompany-item">
+                            <p class="factsAboutCompany-number">3000+</p>
+                            <p class="factsAboutCompany-fact">Успешно выполненных  комплексных работ</p>
+                            <hr class="factsAboutCompany-separator">
+                        <li class="factsAboutCompany-item lighter">
+                            <p class="factsAboutCompany-number">7</p>
+                            <p class="factsAboutCompany-fact">Лет на рынке. Работаем с 2009 г.</p>
+                            <hr class="factsAboutCompany-separator">
+                        <li class="factsAboutCompany-item">
+                            <p class="factsAboutCompany-number">13</p>
+                            <p class="factsAboutCompany-fact">Человек в штате,<br> из них 5 врачей</p>
+                            <hr class="factsAboutCompany-separator">
+                        <li class="factsAboutCompany-item lighter">
+                            <p class="factsAboutCompany-number">1000+</p>
+                            <p class="factsAboutCompany-fact">Количество <br> постоянных клиентов </p>
+                            <hr class="factsAboutCompany-separator">
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
