--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
         </div>
     </div>
 </div>
+<div class="consult">
+    <div class="container">
+        <div class="row">
+            <div class="consult-title">
+
+            </div>
+        </div>
+    </div>
+</div>
 <!-- Jquery -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap JS-->
