ready consult block

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="slider-title">
                     <p class="slider-titleText">Харьковский стоматологический центр</p>
                     <hr class="slider-title-separator">
-                    <p class="slider-titleName">Центр эстетической стоматологии  и имплантологии доктора Ивановa</p>
+                    <p class="slider-titleName">Центр эстетической стоматологии и имплантологии доктора Ивановa</p>
                 </div>
                 <div class="titleBtnGroup">
                     <button class="btn-custom btn-appointment">Записаться на прием</button>
@@ -95,18 +95,22 @@
                     <ul>
                         <li class="factsAboutCompany-item">
                             <p class="factsAboutCompany-number">3000+</p>
-                            <p class="factsAboutCompany-fact">Успешно выполненных  комплексных работ</p>
+
+                            <p class="factsAboutCompany-fact">Успешно выполненных комплексных работ</p>
                             <hr class="factsAboutCompany-separator">
                         <li class="factsAboutCompany-item lighter">
                             <p class="factsAboutCompany-number">7</p>
+
                             <p class="factsAboutCompany-fact">Лет на рынке. Работаем с 2009 г.</p>
                             <hr class="factsAboutCompany-separator">
                         <li class="factsAboutCompany-item">
                             <p class="factsAboutCompany-number">13</p>
+
                             <p class="factsAboutCompany-fact">Человек в штате,<br> из них 5 врачей</p>
                             <hr class="factsAboutCompany-separator">
                         <li class="factsAboutCompany-item lighter">
                             <p class="factsAboutCompany-number">1000+</p>
+
                             <p class="factsAboutCompany-fact">Количество <br> постоянных клиентов </p>
                             <hr class="factsAboutCompany-separator">
                     </ul>
@@ -119,7 +123,14 @@
     <div class="container">
         <div class="row">
             <div class="consult-title">
-
+                <p class="consult-titleText">Закажите бесплатную консультацию у доктора</p>
+            </div>
+            <div class="consult-input">
+                <input type="text" class="consult-inputName" placeholder="Ваше имя:">
+                <input type="text" class="consult-inputPhone" placeholder="Ваш телефон:">
+            </div>
+            <div class="consult-btn">
+                <input type="submit" class="consult-btnBtn" value="Заказать бесплатную консультацию">
             </div>
         </div>
     </div>
