refactor modal window

--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
         </div>
     </div>
 </div>
+<div class="modal-window hide">
+    <div class="paragraph">
+        <span class="paragraph-close">X</span>
+        <input type="text" class="input-modal" placeholder="Ваше имя:">
+        <input type="text" class="input-modal" placeholder="Ваш телефон:">
+    </div>
+</div>
 <div class="consult">
     <div class="container">
         <div class="row">
