ready modal window

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 <div class="modal-window hide">
     <div class="paragraph">
         <span class="paragraph-close">X</span>
-        <input type="text" class="input-modal" placeholder="Ваше имя:">
-        <input type="text" class="input-modal" placeholder="Ваш телефон:">
-    </div>
+        <input type="text" class="input-modal" id="clientName" placeholder="Ваше имя:">
+        <input type="text" class="input-modal" id="clientPhone" placeholder="Ваш телефон:">
+    </div>id=clienName
 </div>
 <div class="consult">
     <div class="container">
