--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <span class="paragraph-close">X</span>
         <input type="text" class="input-modal" id="clientName" placeholder="Ваше имя:">
         <input type="text" class="input-modal" id="clientPhone" placeholder="Ваш телефон:">
-    </div>id=clienName
+    </div>
 </div>
 <div class="consult">
     <div class="container">
@@ -138,6 +138,22 @@
             </div>
             <div class="consult-btn">
                 <input type="submit" class="consult-btnBtn" value="Заказать бесплатную консультацию">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="achievements">
+    <div class="bg-shadow">
+        <div class="container">
+            <div class="row">
+                <div class="title">
+                    <p class="title-text">Мы ценим Ваше время и доверие</p>
+
+                    <p class="title-text">и обладаем всеми знаниями, которые помогут Вам достичь совершенства!</p>
+                </div>
+                <div class="achievementsBtn">
+                    <a href="#!" class="achievements-btn">Читать о Наших достижениях &#187</a>
+                </div>
             </div>
         </div>
     </div>
